--- a/task_1/src/css/style.css
+++ b/task_1/src/css/style.css
@@ -5,20 +5,39 @@
 	margin: 0;
 	padding: 0;
 }
+html {
+	background-color: #6A92D4;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+section {
+	text-align: center;
+	position: absolute;
+ 	top: 50%;
+ 	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+
+
+
+
+
+
+
+
+/* 
 h1 {
 	font-size: 34px;
 	text-align: center;
-}
-img {
-	max-width: 100%;
 }
 a {
 	color: #034569;
 	text-decoration: none;
 	font-size: 18px;
-}
-html {
-	background-color: #64AAD0;
 }
 input {
 	background-color: inherit;
@@ -50,13 +69,7 @@ button > a {
 	color: #64AAD0;
 	font-size: 25px;
 }
-.sign {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	text-align: center;
-}
+
 .button {
 	margin-top: 25px;	
 }
@@ -64,24 +77,4 @@ button > a {
 	margin-top: 25px;
 	display: flex;
 	justify-content: space-around;
-}
-.inputText{
-	color: #aaa;
-}
-
-/*effects*/
-a:hover {
-	color: #fff;
- transform: scale(1.4);
-	transition: .3s;
-}
-button:hover {
- transform: scale(1.1);
- transition: .3s;
-}
-.container {
-	margin-left: auto;
-	margin-right: auto;
-	width: 95%
-}
-@media (max-width: )
+} */ 
