--- a/task_3/src/css/style.css
+++ b/task_3/src/css/style.css
@@ -1,35 +1,265 @@
-input[type=checkbox].toggle-switch {
-    appearance: none;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    width: 6em;
-    height: 3em;
-    border-radius: 3em;
-    background-color: #ddd;
-    outline: 0;
-    cursor: pointer;
-    transition: background-color 0.09ms ease-in-out;
-    position: relative;
-    font-size: 18px;
+*{
+	box-sizing: border-box;
+	font-family: 'Arial', sans-serif;
+	outline: none;
+	margin: 0;
+	padding: 0;
 }
-input[type=checkbox].toggle-switch:checked{
-    background-color: #3af;
+
+ul {
+	list-style: none;
+}
+html {
+	background-color: #7da2e0;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+main {
+	text-align: center;
+	position: absolute;
+ 	top: 50%;
+ 	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+nav {
+	width: 100%;
+	height: 3em;
+	top: 0;
+	position: fixed;
+	z-index: 9;
+	background-color: #373737;
+}
+nav > ul {
+	display: flex;
+	justify-content: space-around;
+	color: #fff;
+	margin-top: 0.6em;
+
+}
+nav > ul > li:first-child {
+	height: 1.9em;
+	width: 4em;
+	margin-right: -3em;
+	margin-top: -0.2em;
+}
+
+li > a {
+	color: #fff;
+}
+
+h1 {
+	font-size: 5em;
+	text-align: center;
+}
+a {
+	color: #034569;
+	text-decoration: none;
+	font-size: 1.2em;
+}
+input {
+	background-color: inherit;
+	margin-top: 2em;
+	text-align: center;	
+	font-size: 1.4em;
+	border-color: #034569;
+	padding: 0.4em 0;
+}
+input::placeholder {
+	color: #034569;
+}
+input, button {
+	border-radius: 0.8em;
+}
+form {
+	flex-direction: column;
+	display: flex;
+}
+button {
+	cursor: pointer;
+	width: 30em;
+	height: 3em;
+	background-color: #034569;
+	margin: 1.8em 0;
+
+	border: none;
+}
+button > a {
+	color: #64AAD0;
+	font-size: 1.8em;
+}
+mark {
+
+	background-color: inherit;
+}
+/* home.html */
+h1, h3, h2 {
+	color: #fff;
+}
+h2, h3 {
+	text-align: center;
+}
+
+section {
+	margin-top: 4em;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
+section > h2  {
+	width: 100%;
+	font-size: 2.3em;
+}
+figure{
+	margin-top: 2.3em;
+	position: relative;	
+}
+figure > a {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
+figure > a:hover::before {
+	content: '';
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 99%;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+figure > img	{
+	width: 42em;
+	height: 23em;
+
+}
+figcaption {
+	top:0;
+	position: absolute;
+	background-color: #373737;
+	color: #fff;
+	width: 6em;
+	font-size: 1.6em;
+	padding-left: 0.4em;
+} 
+
+footer {
+	margin-top: 2.5em;
+	height: 3em;
+	background-color: #373737;
+	text-align: center;
+	padding-top: 0.8em;
+}
+footer > mark {
+	color: #fff;
 }
 
 
-input[type=checkbox].toggle-switch::after{
- content: '';
- width: 3em;
- height: 3em;
- background-color: #fff;
- border-radius: 3em;
- position: absolute;
- transform: scale(0.8);
- left: 0;
- transition: left 0.09s ease-in-out;
- box-shadow: 0 0.1em rgba(0, 0, 0, 0.5);
+/* 
+.sensor > li  {
+	display: flex;
+	justify-content: space-around;
+	margin-top: 1em;
+	width: 100%;
 }
 
-input[type=checkbox].toggle-switch:after{
- left: 3em;
+sensor > ul {
+	display: flex;
+	justify-content:space-between;
+}
+.room > ul > li {
+	max-width: 15em;
+	max-height: 4em;
+	background-color: black;
+	border-radius: 0.3em;
+} */
+
+
+@media all and (max-width: 999px){
+	 .menu, .menu-active{	
+		display: block;
+		height: 2.5em;
+		width: 2.5em;
+		background-color: #fff;
+		border-radius: 50%;
+		box-shadow: 1px 1px 10px rgba(0,0,0,0.4);
+		position: fixed;
+		left: 1em;
+		top: 1em;
+		z-index: 999;
+
+	}
+	.menu span,  span::before,  span:after {
+		display: block;
+		height: 2px;
+		width: 18px;
+		position: absolute;
+		background-color: #373737;
+		left: 50%;
+		margin-left: -9px;
+		top: 50%;
+		margin-top: -1px;
+	}
+	span::before {
+		content: '';
+		margin-top: -8px;
+		transition: all 0.2s;
+	}
+
+	span:after {
+		content: '';
+		margin-top: 6px;
+		transition: all 0.2s;
+	}
+
+	.menu-active  span{
+		background-color: transparent;
+	} 
+	.menu-active  span::before{
+		transform: rotate(45deg);
+		margin-top: 0;
+	}
+	.menu-active  span:after{
+		transform: rotate(-45deg);
+		margin-top: 0;
+	}
+
+
+nav {
+	height: 100%;
+	left:-100vw;
+}
+.active{
+	left: 0;
+}
+nav > ul{
+	height: 100%;
+	flex-direction: column;
+	align-items: center;
+}
+
+nav > ul > li:first-child {
+	margin-right: 0;
+	margin-top: 0;
+}
+
+
+
+}
+
+
+
+@media all and (max-width: 420px){
+/* index.html */
+input, button {
+	margin: 0.9em auto;
+	max-width: 70%;
+}
+main{
+	max-width: 85%;
+}
+
 }
